--- a/frontend/components/account/pug/account-assign.pug
+++ b/frontend/components/account/pug/account-assign.pug
@@ -1,4 +1,4 @@
-.homeUserContent#accountAssignPage
+#accountAssignPage.homeUserContent.userContentNoMargin
 	md-content.md-whiteframe-1dp(aria-label="Assign", flex)
 		md-toolbar
 			.md-toolbar-tools
