--- a/frontend/components/account/pug/account-billing.pug
+++ b/frontend/components/account/pug/account-billing.pug
@@ -1,4 +1,4 @@
-.homeUserContent#accountBillingPage
+#accountBillingPage.homeUserContent.userContentNoMargin
 	md-content.md-whiteframe-1dp(aria-label="Billing", flex)
 		md-toolbar
 			.md-toolbar-tools
