--- a/frontend/components/account/pug/account-profile.pug
+++ b/frontend/components/account/pug/account-profile.pug
@@ -1,4 +1,4 @@
-.homeUserContent
+.homeUserContent.userContentNoMargin
 	md-content.md-whiteframe-1dp(aria-label="Models", flex)
 		md-toolbar
 			.md-toolbar-tools
