--- a/frontend/components/password-forgot/pug/password-forgot.pug
+++ b/frontend/components/password-forgot/pug/password-forgot.pug
@@ -1,5 +1,16 @@
-.homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex="20")
+.homeUserContent(
+	layout="row"
+	layout-align="center"
+	flex)
+
+	md-content.md-whiteframe-1dp(
+		flex-xs="90"
+		flex-sm="55"
+		flex-md="30"
+		flex-lg="25"
+		flex-xl="15"
+		aria-label="Forgot Password")
+
 		md-toolbar
 			.md-toolbar-tools
 				h2 Forgot password
@@ -11,8 +22,13 @@
 			md-input-container.md-block
 				label Email
 				input(type='text', ng-model='vm.email', ng-required, ng-keypress="vm.requestPasswordChange($event)")
-			div(layout="column", layout-align="start start")
-				md-button.md-raised.md-accent(ng-click="vm.requestPasswordChange()") Request Password Change
+
+			div(layout="column",layout-align="center center")
+
+				md-button.md-raised.md-accent(
+					flex="90"
+					ng-click="vm.requestPasswordChange()") Request Password Change
+
 				div(layout="row", layout-align="start center")
 					h3(style="color:{{vm.messageColor}}") {{vm.message}}
 					md-progress-circular(md-diameter="20px", ng-if="vm.showProgress", md-mode="indeterminate")
