--- a/frontend/components/home/pug/home.pug
+++ b/frontend/components/home/pug/home.pug
@@ -5,7 +5,7 @@ div.homeContainer(
 	ng-keyup="vm.keyAction($event)")
 
 	viewer(
-		ng-if="!vm.isMobileDevice"
+		ng-if="!vm.isMobileDevice && !vm.isLegalPage"
 		hide-xs
 		hide-sm
 		node="node"
@@ -18,7 +18,7 @@ div.homeContainer(
 	div.homeHolder(
 		layout="column"
 		flex="100"
-		ng-if="!vm.state.changing")
+		ng-if="!vm.state.changing && !vm.isLegalPage")
 
 		div.homeTopBar
 		#homeLogo(style="pointer-events:{{vm.pointerEvents}}" aria-label="Home")
@@ -30,10 +30,14 @@ div.homeContainer(
 			account='vm.state.account'
 			state='vm.state'
 			query='vm.query'
-			ng-if="vm.sendLoginRequest()"
+			ng-if="vm.loggedIn"
 			keys-down="vm.keysDown")
 
-	#homeLoggedOut(ng-show="!vm.state.changing && !vm.loggedIn")
+	#homeLegalContainer(
+		ng-if="vm.isLegalPage")
+
+	#homeLoggedOut(ng-if="!vm.state.changing && !vm.loggedIn && !vm.isLegalPage")
+		login(ng-if="!vm.loggedIn && !vm.loggedOutPage")
 
 	#legalLinks
 		a(
