--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -159,15 +159,12 @@ home #legalLinks {
 }
 
 home #homeLegalContainer {
-    height: 100%;
+    height: 100% !important;
+    width: 100% !important;
+    overflow: hidden !important;
     position: absolute;
     top: 0;
     left: 0;
-<<<<<<< HEAD
-    z-index: -1;
-=======
->>>>>>> ISSUE_394
-    width: 100%;
 }
 
 home #homeLoggedOut {
