ISSUE #458 - better error handling on model naming

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -351,6 +351,7 @@ account-menu #accountMenuContent md-menu-item > .md-button {
 
 .newModelDialog #modelDialogError {
   margin: 0;
+  text-align: center;
   color: #F44336;
 }
 
