ISSUE #458 - Better handling of revision names

--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -353,6 +353,7 @@ account-menu #accountMenuContent md-menu-item > .md-button {
   margin: 0;
   text-align: center;
   color: #F44336;
+  max-width: 300px;
 }
 
 /** Delete Dialog *********************************************************************************************/
