--- a/frontend/components/right-panel/pug/right-panel.pug
+++ b/frontend/components/right-panel/pug/right-panel.pug
@@ -23,6 +23,7 @@
 		md-button.md-accent.md-fab.md-mini(
 			aria-label="Measure"
 			ng-click="vm.toggleMeasure()"
+			ng-disabled="vm.measureDisabled"
 			style="background:{{vm.measureBackground}}")
 			
 			md-tooltip(md-direction="left") Measure
