--- a/frontend/components/account/pug/account-items.pug
+++ b/frontend/components/account/pug/account-items.pug
@@ -180,7 +180,7 @@
 md-divider
 
 div(layout="row" flex layout-align="end center")
-	#floating-button(layout="column" ng-show="vm.addButtons" ng-init="vm.addEscape()")
+	#floating-button(layout="column" ng-show="vm.addButtons")
 		md-button(layout="row" ng-click="vm.newModel($event, vm.accounts)") Add Model
 		md-button(layout="row" ng-click="vm.setupNewFederation($event, vm.accounts)") Add Federation 
 		md-button(layout="row" ng-click="vm.newProject($event,  vm.accounts)") Add Project
