--- a/frontend/components/account/pug/federation-dialog.pug
+++ b/frontend/components/account/pug/federation-dialog.pug
@@ -15,6 +15,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 					ng-model="vm.federationData.teamspace" 
 					ng-disabled="vm.federationData.teamspace && vm.federationData._isEdit")
 					md-option(
+						required
 						ng-repeat="teamspace in vm.accounts"
 						ng-selected="vm.federationData.teamspace === teamspace.name"
 						value="{{teamspace.name}}") {{teamspace.name}}
@@ -25,6 +26,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 					ng-model="vm.federationData.project"
 					ng-disabled="vm.federationData.project === 'default' || (vm.federationData.project && vm.federationData._isEdit)")
 					md-option(
+						required
 						ng-repeat="project in vm.getProjects(vm.federationData.teamspace)"
 						ng-selected="vm.federationData.project === project.name"
 						value="{{project.name}}") {{project.name}}
@@ -36,13 +38,14 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				div(layout="row", flex)
 					md-input-container(flex="50")
 						input(
-						placeholder="{{vm.federationData.name || 'Federation name'}} "
-						value="{{vm.federationData.name}}"
-						tdr-focus="true"
-						ng-disabled="vm.federationData.name && vm.federationData._isEdit"
-						ng-model="vm.federationData.name"
-						ng-pattern="vm.modelRegExp" 
-						maxlength=20)
+							required
+							placeholder="{{vm.federationData.name || 'Federation name (required)'}} "
+							value="{{vm.federationData.name}}"
+							tdr-focus="true"
+							ng-disabled="vm.federationData.name && vm.federationData._isEdit"
+							ng-model="vm.federationData.name"
+							ng-pattern="vm.modelRegExp" 
+							maxlength=20)
 						.inputHint(ng-if="!vm.federationData.name") Letters, numbers, hyphen and underscore only
 				
 				div( layout="row", flex)
