ISSUE #458 - Fix missing logo for refunds and reciepts

--- a/pug/refund.pug
+++ b/pug/refund.pug
@@ -44,7 +44,7 @@ html(lang="en" ng-app="3drepo")
 							span.flex(flex)
 
 							div(layout="column", layout-align="end end", class="layout-align-end-end layout-column")
-								img#billingInvoiceLogo(src=baseURL+"/public/images/logo.png" style="height:57.5px")
+								img#billingInvoiceLogo(src=baseURL+"/images/logo.png" style="height:57.5px")
 								p.md-display-1.ng-binding 
 														| Credit Note
 
