--- a/frontend/components/account/css/account.css
+++ b/frontend/components/account/css/account.css
@@ -279,6 +279,7 @@ account-info .accountInfoPage .md-button {
   max-width: 300px;
   min-width: 100px;
   max-height: 150px;
+  height: 100px;
   min-height: 100px;
   background: #E8EAF6;
   margin: auto;
