--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -164,6 +164,7 @@ home #homeLoggedOut {
     margin: auto 0;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
 }
     
 home #legalLinks a {
