--- a/frontend/components/register-verify/pug/register-verify.pug
+++ b/frontend/components/register-verify/pug/register-verify.pug
@@ -1,5 +1,10 @@
 .homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Registered", flex="30")
+	md-content.md-whiteframe-1dp(aria-label="Registered"
+			flex-xs="85"
+			flex-sm="85"
+			flex-md="45"
+			flex-lg="30"
+			flex-xl="25")
 		md-toolbar
 			.md-toolbar-tools
 				h2 Registered for 3D Repo
