--- a/frontend/components/register-request/pug/register-request.pug
+++ b/frontend/components/register-request/pug/register-request.pug
@@ -1,5 +1,10 @@
 .homeUserContent(layout="row", layout-align="center", flex)
-	md-content.md-whiteframe-1dp(aria-label="Sign up", flex="30")
+	md-content.md-whiteframe-1dp(aria-label="Sign up", 
+			flex-xs="85"
+			flex-sm="85"
+			flex-md="45"
+			flex-lg="30"
+			flex-xl="25")
 		md-toolbar
 			.md-toolbar-tools
 				h2 Sign up request
