ISSUE #458 - Round off corners of login

--- a/frontend/components/login/css/login.css
+++ b/frontend/components/login/css/login.css
@@ -9,6 +9,10 @@ login .homeUserContent {
   }
 }
 
+login .homeUserContent md-content {
+  border-radius: 4px;
+}
+
 login .loginButton {
   width: 100% !important;
 }
