--- a/frontend/components/login/pug/login.pug
+++ b/frontend/components/login/pug/login.pug
@@ -3,7 +3,7 @@
 	layout-align="center"
 	flex)
 	
-	md-content.md-whiteframe(
+	md-content.md-whiteframe-2dp(
 		aria-label="Registered"
 		flex-xl="15"
 		flex-lg="20"
